fix meta fields

--- a/public/index.html
+++ b/public/index.html
@@ -9,30 +9,32 @@
     />
     <meta
       name="description"
+      property="og:description"
       content="Data explorer for local data investigation"
     />
     <meta
-      name="og:description"
+      name="description"
+      property="twitter:description"
       content="Data explorer for local data investigation"
     />
     <meta
-      name="twitter:description"
-      content="Data explorer for local data investigation"
-    />
-    <meta
-      name="og:title"
+      name="title"
+      property="og:title"
       content="Data Explorer"
     />
     <meta
-      name="twitter:title"
+      name="title"
+      property="twitter:title"
       content="Data Explorer"
     />
     <meta
-      name="og:image"
+      name="image"
+      property="og:image"
       content="%PUBLIC_URL%/og.png"
     />
     <meta
-      name="twitter:image"
+      name="image"
+      property="twitter:image"
       content="%PUBLIC_URL%/og.png"
     />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
